# rust-battery

./: .cirrus.yml  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
battery/: CHANGELOG.md  Cargo.toml  build.rs
battery-cli/: Cargo.toml  README.md
battery-cli/src/: main.rs
battery-cli/src/ui/: app.rs  mod.rs
battery-cli/src/ui/util/: event.rs  graph.rs
battery-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
battery-ffi/examples/: ffi.c  ffi.py
battery-ffi/src/: battery.rs  errors.rs  iterator.rs  lib.rs  manager.rs  state.rs  technology.rs
battery/examples/: simple.rs
battery/src/: errors.rs  lib.rs  units.rs
battery/src/platform/: mod.rs  traits.rs
battery/src/platform/darwin/: device.rs  iterator.rs  mod.rs
battery/src/platform/darwin/iokit/: errors.rs  power_source.rs  wrappers.rs
battery/src/platform/freebsd/: acpi.rs  device.rs  iterator.rs  manager.rs  mod.rs
battery/src/platform/linux/: device.rs  iterator.rs  manager.rs  mod.rs  sysfs.rs
battery/src/platform/linux/sysfs/: fs.rs  mod.rs  source.rs
battery/src/platform/linux/tests/: issue_28.rs  issue_30.rs  issue_40.rs  mod.rs
battery/src/platform/macos/: device.rs  iokit.rs  iterator.rs  manager.rs  mod.rs  tests.rs  traits.rs
battery/src/platform/macos/iokit/: errors.rs  mod.rs  power_source.rs  sys.rs  wrappers.rs
battery/src/platform/windows/: device.rs  iterator.rs  manager.rs  mod.rs
battery/src/platform/windows/ffi/: mod.rs  wide_string.rs  wrappers.rs
battery/src/platform/windows/ffi/ioctl/: info.rs  mod.rs  query_info.rs  status.rs  wait_status.rs
battery/src/types/: battery.rs  iterator.rs  manager.rs  mod.rs  state.rs  technology.rs
ci/: before_install.sh  build.sh  script.sh
src/: info.rs  lib.rs  main.rs
src/platform/: linux.rs  mod.rs
src/platform/darwin/: device.rs  mod.rs
src/platform/darwin/tests/: example.plist  mod.rs
src/platform/linux/: device.rs  mod.rs  sysfs.rs
src/platform/macos/: device.rs  iokit.rs  mod.rs
src/platform/windows/: device.rs  mod.rs
src/platform/windows/ffi/: mod.rs
src/platform/windows/ffi/ioctl/: info.rs  query_info.rs  status.rs
src/types/: battery.rs  device.rs  mod.rs  state.rs  technology.rs
