[package]
name = "battery"
version = "0.2.0"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform information about batteries"
repository = "https://github.com/svartalf/rust-battery"
readme = "README.md"
categories = ["os"]
keywords = ["battery", "linux", "macos"]
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
cfg-if = "0.1"
humantime = "1.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
lazy-init = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
