[package]
name = "battery-cli"
version = "0.1.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "CLI tool for batteries reports"
repository = "https://github.com/svartalf/rust-battery"
readme = "README.md"
categories = ["os"]
keywords = ["battery", "linux", "macos", "windows"]
license = "Apache-2.0 OR MIT"
exclude = ["assets"]

[badges]
travis-ci = { repository = "svartalf/rust-battery", branch = "master" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "battery"
path = "src/main.rs"
doc = false
test = false

[dependencies]
cfg-if = "0.1"

[target.'cfg(not(windows))'.dependencies]
battery = "0.6.0"
humantime = "1.2.0"
tui = "0.4.0"
termion = "1.5.1"
itertools = "0.8.0"
