[package]
name = "battery-ffi"
version = "0.7.2" # remember to update html_root_url
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "FFI bindings for battery crate"
repository = "https://github.com/svartalf/rust-battery"
readme = "README.md"
categories = ["os"]
keywords = ["battery", "ffi", "linux", "macos", "windows"]
license = "Apache-2.0 OR MIT"

[badges]
travis-ci = { repository = "svartalf/rust-battery", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "svartalf/rust-battery" }
is-it-maintained-open-issues = { repository = "svartalf/rust-battery" }

[lib]
name = "battery_ffi"
crate-type = ["cdylib"]

[features]
default = ["cbindgen"]

[dependencies.battery]
version = "0.7.1"
path = "../battery"

[dependencies]
libc = "0.2.51"

[build-dependencies]
cbindgen = { version = "0.8.0", optional = true }

[package.metadata.docs.rs]
no-default-features = true
