[package]
name = "battery"
version = "0.7.4" # remember to update html_root_url
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform information about batteries"
repository = "https://github.com/svartalf/rust-battery"
readme = "README.md"
categories = ["os"]
keywords = ["battery", "linux", "macos", "windows", "freebsd"]
license = "Apache-2.0 OR MIT"

[badges]
travis-ci = { repository = "svartalf/rust-battery", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "svartalf/rust-battery" }
is-it-maintained-open-issues = { repository = "svartalf/rust-battery" }

[dependencies]
cfg-if = "0.1"
num-traits = { version = "0.2", default_features = false }
uom = { version = "^0.23", features = ["autoconvert", "f32", "si"] }

[dev-dependencies]
tempfile = "^3.0"

[target.'cfg(target_os = "linux")'.dependencies]
lazycell = "1.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "^0.2"
mach = "0.2.3"
core-foundation = "0.6.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version ="0.3.7", features = ["impl-default", "devguid", "winbase", "ioapiset", "ntdef", "setupapi", "handleapi", "errhandlingapi", "winerror"] }

[target.'cfg(any(target_os = "dragonfly", target_os = "freebsd"))'.dependencies]
nix = "^0.14"
libc = "^0.2"
