[package]
name = "battery"
version = "0.7.5" # remember to update html_root_url
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform information about the notebook batteries"
repository = "https://github.com/svartalf/rust-battery"
readme = "README.md"
categories = ["os"]
keywords = ["battery", "linux", "macos", "windows", "freebsd"]
license = "Apache-2.0 OR MIT"
build = "build.rs"

[badges]
travis-ci = { repository = "svartalf/rust-battery", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "svartalf/rust-battery" }
is-it-maintained-open-issues = { repository = "svartalf/rust-battery" }

[dependencies]
cfg-if = "0.1"
num-traits = { version = "0.2", default_features = false }
uom = { version = "~0.28", features = ["autoconvert", "f32", "si"] }

[target.'cfg(target_os = "linux")'.dependencies]
lazycell = "~1.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "^0.2"
mach = "^0.3"
core-foundation = "~0.7"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version ="~0.3", features = ["impl-default", "devguid", "winbase", "ioapiset", "ntdef", "setupapi", "handleapi", "errhandlingapi", "winerror"] }

[target.'cfg(any(target_os = "dragonfly", target_os = "freebsd"))'.dependencies]
libc = "~0.2"

[dev-dependencies]
tempfile = "^3.0"
approx = "0.3.2"
